--- a/login.html
+++ b/login.html
@@ -68,7 +68,7 @@
                         <hr />
                         <p class="text-center">
                             Don't have an account?
-                            <a href="/signup.html">Sign up</a>
+                            <a href="signup.html">Sign up</a>
                         </p>
                     </div>
                 </div>
@@ -113,7 +113,7 @@
                                 JSON.stringify({ loginUser: users[i] })
                             );
                             f = 1;
-                            window.location.href = "/index.html";
+                            window.location.href = "index.html";
                         }
                     }
                     if (f == 0) {
