--- a/signup.html
+++ b/signup.html
@@ -92,7 +92,7 @@
                         <hr />
                         <p class="text-center">
                             Already have an account?
-                            <a href="/login.html">Login</a>
+                            <a href="login.html">Login</a>
                         </p>
                     </div>
                 </div>
@@ -186,7 +186,7 @@
                         "taskySidUser",
                         JSON.stringify({ users: users })
                     );
-                    window.location.href = "/login.html";
+                    window.location.href = "login.html";
                 });
             });
         </script>
